Improvements on localization

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,4 +1,5 @@
 {
-    "categories":"Categories",
-    "banana":"Banana"
+  "categories": "Categories",
+  "banana": "Banana",
+  "favorites": "Favorites"
 }
